--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": false,
   "scripts": {
     "start": "node index.js"
+    "build": "echo 'No build needed'"
   },
   "dependencies": {
     "axios": "latest",
