--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": false,
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
     "build": "echo 'No build needed'"
   },
   "dependencies": {
