--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": false,
   "scripts": {
     "start": "node index.js",
-    "build": "echo 'No build needed'"
+    "build": "echo 'success'"
   },
   "dependencies": {
     "axios": "latest",
