--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "node",
   "main": "index.js",
   "private": false,
-  "scripts": {
-    "start": "node index.js",
+  "scripts":
+    "start": "./node_modules/.bin/node index.js" 
+,
     "build": "echo 'success'"
   },
   "dependencies": {
